--- a/june-4/readme
+++ b/june-4/readme
@@ -2,8 +2,9 @@
 Overview
 ========
 
-A collection of censored keywords realted to the June 4 1989 Tiananmen Square Massacare collected from chat apps (WeChat, LINE, TOM-Skype, Sina UC) and live streaming platforms (YY, Sina Show, 9158, and GuaGua)
-Each of these applications have client-side implementations of keyword censorship. Through reverse engineering we extract the keyword lists and track updates to the lists over time.  
+A collection of censored keywords realted to the June 4 1989 Tiananmen Square Massacare collected from chat apps (WeChat, LINE, TOM-Skype, Sina UC) and live streaming platforms (YY, Sina Show, 9158, GuaGua)
+Each of these applications have client-side implementations of keyword censorship. 
+Through reverse engineering we extract the keyword lists and track updates to the lists over time.  
 
 CSV Data Fields
 ========
@@ -16,4 +17,4 @@ machine_translation: translation from Google Translate
 
 human_translation: translation from human. Only applied when necesssary 
 
-client: live streaming app
+client: application the keyword was collected from (WeChat, LINE, TOM-Skype, Sina UC, YY, Sina Show, 9158, GuaGua)
