--- a/june-4/readme
+++ b/june-4/readme
@@ -1,13 +1,12 @@
 
-Overview
-========
+## Overview
+
 
 A collection of censored keywords realted to the June 4 1989 Tiananmen Square Massacare collected from chat apps (WeChat, LINE, TOM-Skype, Sina UC) and live streaming platforms (YY, Sina Show, 9158, GuaGua)
 Each of these applications have client-side implementations of keyword censorship. 
 Through reverse engineering we extract the keyword lists and track updates to the lists over time.  
 
-CSV Data Fields
-========
+## CSV Data Fields
 
 The categorized data in each CSV is organized by the following fields:
 
